plugins {
    id 'java'
}

group = 'cn.popcraft'
version = '1.2.6-SNAPSHOT'
description = 'Spigot Plugin'

repositories {
    // 优先使用阿里云镜像
    maven { 
        url 'https://maven.aliyun.com/repository/public/' 
        metadataSources {
            mavenPom()
            artifact()
            ignoreGradleMetadataRedirection()
        }
    }
    maven { 
        url 'https://maven.aliyun.com/repository/central' 
        metadataSources {
            mavenPom()
            artifact()
            ignoreGradleMetadataRedirection()
        }
    }
    
    // 特殊仓库(Spigot/Paper)必须使用官方源
    maven {
        url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
        content {
            includeGroup 'org.spigotmc'
        }
    }
    maven {
        url 'https://papermc.io/repo/repository/maven-public/'
        content {
            includeGroup 'io.papermc'
        }
    }
    
    // 最后才尝试中央仓库
    maven { 
        url 'https://repo.maven.apache.org/maven2/'
        name 'Maven Central'
        metadataSources {
            mavenPom()
            artifact()
            ignoreGradleMetadataRedirection()
        }
        content {
            // 只有当其他仓库没有找到依赖时才使用
            releasesOnly()
        }
    }
}

dependencies {
    // Spigot API依赖
    compileOnly 'org.spigotmc:spigot-api:1.19.4-R0.1-SNAPSHOT' // 可以根据需要更改版本
    
    // 其他依赖可以在这里添加
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}